crates/parser/src/snapshots/parser__tests__parse_inline_ok@0170_prefix_let_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(dlet ((foo 1) (bar 2)) (!claim A))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0170_prefix_let_ded.ath
---
PREFIX_LET_DED
  L_PAREN "("
  DLET_KW "dlet"
  WHITESPACE " "
  L_PAREN "("
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "foo"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "1"
    R_PAREN ")"
  WHITESPACE " "
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "bar"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "2"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "A"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

