crates/parser/src/snapshots/parser__tests__parse_inline_ok@0171_prefix_pick_any_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(pick-any a : Int (!claim A))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0171_prefix_pick_any_ded.ath
---
PICK_ANY_DED
  L_PAREN "("
  PICK_ANY_KW "pick-any"
  WHITESPACE " "
  TYPED_PARAM
    IDENTIFIER
      IDENT "a"
    WHITESPACE " "
    COLON ":"
    WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "Int"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      IDENTIFIER
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "A"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

