crates/parser/src/snapshots/parser__tests__parse_inline_ok@0172_prefix_try_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(dtry (!claim a) (!claim b))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0172_prefix_try_ded.ath
---
PREFIX_TRY_DED
  L_PAREN "("
  DTRY_KW "dtry"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      IDENTIFIER
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "a"
    R_PAREN ")"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      IDENTIFIER
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "b"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

