crates/parser/src/snapshots/parser__tests__parse_inline_ok@0173_prefix_check_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(dcheck (A (!claim B)) (else (!claim D)))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0173_prefix_check_ded.ath
---
PREFIX_CHECK_DED
  L_PAREN "("
  DCHECK_KW "dcheck"
  WHITESPACE " "
  CHECK_DED_CLAUSE
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "A"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "B"
      R_PAREN ")"
    R_PAREN ")"
  WHITESPACE " "
  CHECK_DED_CLAUSE
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "else"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "D"
      R_PAREN ")"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

