crates/parser/src/snapshots/parser__tests__parse_inline_ok@0174_prefix_seq_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(dseq (!claim a) (!claim b))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0174_prefix_seq_ded.ath
---
SEQ_DED
  L_PAREN "("
  DSEQ_KW "dseq"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "a"
    R_PAREN ")"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "b"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

