crates/parser/src/snapshots/parser__tests__parse_inline_ok@0176_prefix_assert_named.ath.snap
---
source: crates/parser/src/tests.rs
description: "(assert foo := (bar = bar))\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0176_prefix_assert_named.ath
---
PREFIX_ASSERT_DIR
  L_PAREN "("
  ASSERT_KW "assert"
  WHITESPACE " "
  NAME
    IDENT "foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "bar"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "="
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "bar"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

