crates/parser/src/snapshots/parser__tests__parse_inline_ok@0179_pick_witness_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witness a for b (!claim a)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0179_pick_witness_ded.ath
---
PICK_WITNESS_DED
  PICK_WITNESS_KW "pick-witness"
  WHITESPACE " "
  IDENTIFIER
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      IDENTIFIER
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "a"
    R_PAREN ")"
  WHITESPACE "\n"

