crates/parser/src/snapshots/parser__tests__parse_inline_ok@0180_infer_by_uppercase.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A BY B on C }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0180_infer_by_uppercase.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    INFERENCE
      INFER_BY
        IDENT_EXPR
          NAME_REF
            IDENT "A"
        WHITESPACE " "
        BY_KW "BY"
        WHITESPACE " "
        IDENT_EXPR
          NAME_REF
            IDENT "B"
        WHITESPACE " "
        ON_KW "on"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "C"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

