crates/parser/src/snapshots/parser__tests__parse_inline_ok@0181_set_precedence_dir_multiple.ath.snap
---
source: crates/parser/src/tests.rs
description: "set-precedence (a b c) 100\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0181_set_precedence_dir_multiple.ath
---
SET_PRECEDENCE_DIR
  SET_PRECEDENCE_KW "set-precedence"
  WHITESPACE " "
  L_PAREN "("
  NAME_REF
    IDENT "a"
  WHITESPACE " "
  NAME_REF
    IDENT "b"
  WHITESPACE " "
  NAME_REF
    IDENT "c"
  R_PAREN ")"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "100"
  WHITESPACE "\n"

